<resources>
    <string name="app_name">MagicArcade</string>
    <string name="logo">Logo</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_ID">Enter Phone ID:</string>
    <string name="connect">Connect</string>
    <string name="points_on_account">Points on account:</string>
    <string name="list_of_attractions">List of attractions:</string>
    <string name="attraction_1">Attraction 1</string>
    <string name="attraction_2">Attraction 2</string>
    <string name="attraction_3">Attraction 3</string>
    <string name="attraction_4">Attraction 4</string>
    <string name="attraction_5">Attraction 5</string>
    <string name="attraction_6">Attraction 6</string>
    <string name="multiplier_x1">x1</string>
    <string name="home">Home</string>
    <string name="QR_scan">QR scan</string>
    <string name="vouchers">Vouchers</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="redeem_voucher">Redeem voucher</string>
    <string name="Voucher_5">Voucher 5: Gratis toegang tot een spel - 250 punten</string>
    <string name="Voucher_4">Voucher 4: 50% korting op een speeltje - 200 punten</string>
    <string name="Voucher_3">Voucher 3: Gratis friet - 150 punten</string>
    <string name="Voucher_2">Voucher 2: Gratis ijsje - 120 punten</string>
    <string name="Voucher_1">Voucher 1: Gratis cola - 100 punten</string>
    <string name="voucher_image">Image of a voucher</string>
</resources>