<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:padding="16dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray">

                <TextView
                    android:id="@+id/appNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/georgia"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/appLogoImageView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/magic_interactive_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewEnterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/verdana"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:fontFamily="@font/verdana"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewEnterPhoneID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_ID"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/verdana"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/editTextPhoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:fontFamily="@font/verdana"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
